--- a/analytics.html
+++ b/analytics.html
@@ -166,6 +166,20 @@
             height: 300px;
         }
 
+        .toggle-table-btn {
+            font-size: 12px;
+            padding: 4px 8px;
+            margin-left: 10px;
+            background: #667eea;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-weight: 400;
+        }
+        .toggle-table-btn:hover {
+            background: #5568d3;
+        }
         .table-container {
             overflow-x: auto;
             margin: 20px 0;
