--- a/analytics.html
+++ b/analytics.html
@@ -165,6 +165,13 @@
             position: relative;
             height: 400px;
             margin: 30px 0;
+            width: 100%;
+            overflow: hidden;
+        }
+        
+        .chart-container canvas {
+            max-height: 100%;
+            max-width: 100%;
         }
 
         .chart-container.small {
