--- a/analytics.html
+++ b/analytics.html
@@ -482,6 +482,157 @@
             box-shadow: 0 2px 8px rgba(0,0,0,0.05);
         }
 
+        .user-scoring-form {
+            background: white;
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+            margin: 20px 0;
+        }
+
+        .form-group {
+            margin-bottom: 20px;
+        }
+
+        .form-group label {
+            display: block;
+            font-weight: 600;
+            color: #333;
+            margin-bottom: 8px;
+            font-size: 14px;
+        }
+
+        .form-group select,
+        .form-group input[type="number"] {
+            width: 100%;
+            padding: 12px;
+            border: 2px solid #e0e0e0;
+            border-radius: 8px;
+            font-size: 14px;
+            font-family: 'Inter', sans-serif;
+            transition: border-color 0.3s;
+        }
+
+        .form-group select:focus,
+        .form-group input[type="number"]:focus {
+            outline: none;
+            border-color: #667eea;
+        }
+
+        .scoring-result {
+            background: linear-gradient(135deg, #667eea15 0%, #764ba215 100%);
+            border-left: 4px solid #667eea;
+            padding: 25px;
+            border-radius: 10px;
+            margin-top: 20px;
+            display: none;
+        }
+
+        .scoring-result.active {
+            display: block;
+        }
+
+        .scoring-result h3 {
+            color: #667eea;
+            margin-bottom: 15px;
+        }
+
+        .recommended-frame {
+            font-size: 24px;
+            font-weight: 700;
+            color: #667eea;
+            margin: 15px 0;
+        }
+
+        .email-copy-suggestion {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            margin: 15px 0;
+            border-left: 4px solid #10b981;
+        }
+
+        .email-copy-suggestion h4 {
+            color: #059669;
+            margin-bottom: 10px;
+        }
+
+        .copy-text {
+            background: #f8f9fa;
+            padding: 15px;
+            border-radius: 8px;
+            font-style: italic;
+            color: #555;
+            margin: 10px 0;
+            border-left: 3px solid #10b981;
+        }
+
+        .export-buttons {
+            display: flex;
+            gap: 10px;
+            margin: 20px 0;
+            flex-wrap: wrap;
+        }
+
+        .export-btn {
+            padding: 10px 20px;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: white;
+            border: none;
+            border-radius: 8px;
+            font-size: 14px;
+            font-weight: 600;
+            cursor: pointer;
+            transition: transform 0.2s;
+        }
+
+        .export-btn:hover {
+            transform: translateY(-2px);
+        }
+
+        .funnel-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            margin: 20px 0;
+        }
+
+        .funnel-stage {
+            background: white;
+            padding: 20px;
+            border-radius: 12px;
+            text-align: center;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+        }
+
+        .funnel-stage h4 {
+            color: #667eea;
+            margin-bottom: 10px;
+        }
+
+        .funnel-arrow {
+            text-align: center;
+            font-size: 32px;
+            color: #667eea;
+            margin: 10px 0;
+        }
+
+        .alignment-check {
+            background: white;
+            padding: 15px;
+            border-radius: 8px;
+            margin: 10px 0;
+            border-left: 4px solid #10b981;
+        }
+
+        .alignment-check.warning {
+            border-left-color: #f59e0b;
+        }
+
+        .alignment-check.error {
+            border-left-color: #ef4444;
+        }
+
         .recommendation-box {
             background: linear-gradient(135deg, #10b98115 0%, #05966915 100%);
             border-left: 4px solid #10b981;
@@ -595,6 +746,25 @@
         <div class="section" id="segmentationSection">
             <h2>🎯 Segmentation & Targeting Recommendations</h2>
             <div id="segmentationContent"></div>
+        </div>
+
+        <!-- Interactive User Scoring Tool -->
+        <div class="section" id="userScoringSection">
+            <h2>🔮 Interactive User Scoring Tool</h2>
+            <p style="margin-bottom: 20px; color: #666;">Input user characteristics to get a personalized frame recommendation with confidence score.</p>
+            <div id="userScoringContent"></div>
+        </div>
+
+        <!-- Website-Email Alignment Section -->
+        <div class="section" id="websiteAlignmentSection">
+            <h2>🔗 Website-Email Alignment Analysis</h2>
+            <div id="websiteAlignmentContent"></div>
+        </div>
+
+        <!-- Message Recommendations Section -->
+        <div class="section" id="messageRecommendationsSection">
+            <h2>✍️ Message Recommendations & Email Copy Suggestions</h2>
+            <div id="messageRecommendationsContent"></div>
         </div>
 
         <!-- Communication Effectiveness Section -->
