--- a/analytics.html
+++ b/analytics.html
@@ -730,6 +730,13 @@
             <div id="moderationCharts"></div>
         </div>
 
+        <!-- Mediation Analysis Section -->
+        <div class="section" id="mediationSection">
+            <h2>🔗 Mediation Analysis</h2>
+            <p style="margin-bottom: 20px; color: #666;">Understanding why framing affects intention: testing mediating pathways (framing → mediators → intention)</p>
+            <div id="mediationContent"></div>
+        </div>
+
         <!-- Manipulation Check Section -->
         <div class="section" id="manipulationSection">
             <h2>🔬 Manipulation Check</h2>
